05_squares/grade.txt
Grading at Wed Sep 25 09:50:19 UTC 2019
Trying to compile your code and link with squares_test.o
squares.c: In function ‘isAtBorder’:
squares.c:27:32: error: lvalue required as left operand of assignment
   if (coord == offset || coord = (offset + size)) {
                                ^
Could not compile your code

Overall Grade: FAILED
